--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Anan45Mohsen.github.io/My-Portifolio",
+  "homepage": "https://Anan45Mohsen.github.io/portifolio",
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
